# rostermonsterv2

./: .gcloudignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pytest.ini
apps_script/bound_shim/: .clasp.json  README.md
apps_script/bound_shim/src/: Menu.gs  appsscript.json
apps_script/central_library/: README.md
apps_script/central_library/src/: AnalysisRenderer.gs  Config.gs  Extractor.gs  Writeback.gs
apps_script/launcher/: README.md
apps_script/launcher/src/: AnalysisRenderer.gs  AnalysisRendererForm.html  AsyncRenderCallback.gs  DeleteSheetsById.gs  DeleteSheetsByNamePrefix.gs  ExtractById.gs  Launcher.gs  LauncherForm.html  Menu.gs  ScorerConfigTab.gs  TemplateArtifact.gs  Writeback.gs  WritebackForm.html  appsscript.json
apps_script/m1_extractor_library/: README.md
apps_script/m1_extractor_library/src/: CompletenessValidator.gs  DownloadBlob.gs  Extractor.gs  SnapshotBuilder.gs  appsscript.json
apps_script/m1_sheet_generator/: README.md
apps_script/m1_sheet_generator/src/: CallPointAutoFill.gs  DatesAndHolidays.gs  DebugSmokeTest.gs  GenerateSheet.gs  Launcher.gs  LauncherForm.html  LauncherSuccess.html  Layout.gs  Menu.gs  ProtectionAndValidation.gs  ScorerConfigTab.gs  TemplateArtifact.gs  TemplateData.gs  Tests.gs  Writeback.gs  WritebackForm.html  appsscript.json
apps_script/m1_template_bound_script/: README.md
apps_script/m1_template_bound_script/src/: Menu.gs  appsscript.json
apps_script/m2_extractor_library/: .clasp.json  README.md
apps_script/m2_template_bound_script/: README.md
cloud_compute_service/: README.md  requirements.txt
docs/: analysis_contract.md  analysis_renderer_contract.md  blueprint.md  cloud_compute_contract.md  decision_log.md  delivery_plan.md  domain_model.md  future_work.md  open_decisions.md  parser_normalizer_contract.md  request_semantics_contract.md  roadmap.md  rule_engine_contract.md  scorer_contract.md  selector_contract.md  sheet_generation_contract.md  snapshot_adapter_contract.md  snapshot_contract.md  solver_contract.md  template_artifact_contract.md  template_contract.md  writeback_contract.md
experimental/: .gitignore  README.md
experimental/timing/: cloud_e2e_results.md  results.md  run_timing_benchmark.py
python/: README.md  pyproject.toml
python/rostermonster/: __init__.py  domain.py  pipeline.py  run.py  snapshot.py  template_artifact.py
python/rostermonster/analysis/: __init__.py  __main__.py  admission.py  aggregates.py  output.py  selection.py
python/rostermonster/parser/: __init__.py  admission.py  request_semantics.py  result.py  scoring_overlay.py
python/rostermonster/rule_engine/: __init__.py  evaluator.py  result.py  state.py
python/rostermonster/scorer/: __init__.py  components.py  result.py  scorer.py
python/rostermonster/selector/: __init__.py  result.py  selector.py  sidecars.py  strategy.py
python/rostermonster/solver/: __init__.py  cr_floor.py  lahc.py  result.py  seeds.py  solver.py  strategy.py  strategy_registry.py
python/rostermonster/templates/: __init__.py  icu_hd.py
python/rostermonster_service/: __init__.py  app.py  batch_client.py  batch_job_spec.py  gcs.py  lahc_orchestrator.py  post_aggregation.py  worker.py
python/tests/: extract_icu_hd_may_2026.py  fixtures.py  test_analysis_integration.py  test_analysis_unit.py  test_batch_client.py  test_batch_job_spec.py  test_integration_smoke.py  test_lahc_determinism_audit.py  test_lahc_orchestrator.py  test_parser.py  test_pipeline.py  test_post_aggregation.py  test_real_icu_hd_may_2026.py  test_rule_engine.py  test_run_cli.py  test_scorer.py  test_seeds.py  test_selector.py  test_service.py  test_solver.py  test_worker.py
python/tests/data/: icu_hd_may_2026_snapshot.json
(+6 files in other folders)
