[project]
name = "rostermonster"
version = "0.1.0"
description = "Roster Monster v2 — local-first Python compute pipeline (M2)"
requires-python = ">=3.11"
authors = [{ name = "Roster Monster maintainers" }]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Cloud Run service runtime deps per `docs/cloud_compute_contract.md`
# §8.5. Mirrors `cloud_compute_service/requirements.txt` for non-Docker
# installations (local Flask dev server, test harness). google-auth +
# requests are the ID-token verification stack per `docs/decision_log.md`
# D-0054 (Flask-side operator-allowlist auth). google-cloud-storage +
# google-cloud-batch added at M7 C2 Task 2D / 2F for the LAHC parallel
# Cloud Batch path per `docs/cloud_compute_contract.md` §8.7.
service = [
    "flask>=3.1,<4.0",
    "gunicorn>=23.0,<24.0",
    "google-auth>=2.30,<3.0",
    "requests>=2.32,<3.0",
    "google-cloud-storage>=2.18,<4.0",
    "google-cloud-batch>=0.17,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rostermonster*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# `slow` marker tags tests that run the real LAHC solver at production
# parameters (FW-0037 elbow tuple: idleThreshold=3500, maxIters=100k)
# through the M7 worker / orchestrator integration path. Each such
# trajectory takes 30-90s on the icu_hd_may_2026 fixture; the
# determinism audit alone is ~15-25 min. PR validation (CI default
# `pytest`) deselects them via the addopts below; full coverage runs
# include them via `pytest -m "slow or not slow"` (or override addopts).
# Codex P2 finding on PR #150 commit c48d9deef2 — keeps default PR
# validation under a few minutes while preserving the byte-identity
# audit + worker-orchestrator round-trip as opt-in CI sweeps.
markers = [
    "slow: marks tests that run real LAHC solver at FW-0037 elbow tuple — multi-minute, deselect by default",
]
addopts = "-m 'not slow'"
